docs: add documentation for create Cattle
